Closed Bug 1275510 Opened 8 years ago Closed 8 years ago

|gIOService| is undefined in RTSPConnectionHandler.h

Categories

(Core :: Networking, defect)

All
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: tzimmermann, Assigned: tzimmermann)

References

Details

(Whiteboard: [necko-active])

Attachments

(1 file)

Happens on m-c@298654:5511d54a3f17
Comment on attachment 8756236 [details]
MozReview Request: Bug 1275510: RTSP: Add namespace when refering to |gIOService|, r?dragana

https://reviewboard.mozilla.org/r/55056/#review51708
Attachment #8756236 - Flags: review?(dd.mozilla) → review+
Summary: |gIOService| is undefined in RTDSConnectionHandler.h → |gIOService| is undefined in RTSPConnectionHandler.h
Whiteboard: [necko-active]
https://hg.mozilla.org/mozilla-central/rev/9763d6e8b2f4
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: