Bug 1275510: RTSP: Add namespace when refering to |gIOService|, r=dragana

MozReview-Commit-ID: 1Es1i5qLJgl